# WeDPR-Client

./: .gitignore  CLAUDE.md  README.md  deploy.conf.example  deploy.sh
backend/cpp/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
backend/cpp/cmake/: BuildInfo.cmake  BuildInfoGenerator.cmake  CompilerSettings.cmake  Dependencies.cmake  IncludeDirectories.cmake  InstallBcosUtilities.cmake  Installlibhdfs3.cmake  Options.cmake  ProjectAPSI.cmake  ProjectTCMalloc.cmake  ProjectWedprCrypto.cmake  TargetSettings.cmake  Version.cmake  config.cmake  grpc.cmake  python.cmake  swig.cmake
backend/cpp/cmake/scripts/: buildinfo.cmake
backend/cpp/cmake/templates/: BuildInfo.h.in
backend/cpp/ppc-framework/: Common.h  Helper.h
backend/cpp/ppc-framework/crypto/: CryptoBox.h  ECDHCrypto.h  EccCrypto.h  Hash.h  Ihc.h  KeyPair.h  Oprf.h  Ore.h  PRNG.h  Paillier.h  RA2018OprfInterface.h  SymCrypto.h
backend/cpp/ppc-framework/front/: Channel.h  FrontConfig.h  FrontInterface.h  IFront.h  INodeDiscovery.h
backend/cpp/ppc-framework/gateway/: GatewayProtocol.h  IGateway.h
backend/cpp/ppc-framework/http/: HttpInterface.h  HttpTypeDef.h
backend/cpp/ppc-framework/io/: DataBatch.h  DataResourceLoader.h  LineReader.h  LineWriter.h
backend/cpp/ppc-framework/libwrapper/: BigNum.h  Buffer.h  FloatingPointNumber.h  OreFloatingNumber.h
backend/cpp/ppc-framework/protocol/: Constant.h  DataResource.h  EndPoint.h  GlobalConfig.h  GrpcConfig.h  Handler.h  INodeInfo.h  Krb5AuthConfig.h  Message.h  MessagePayload.h  P2PMessage.h  PPCMessageFace.h  PartyResource.h  Protocol.h  RouteType.h  Task.h
backend/cpp/ppc-framework/rpc/: RpcInterface.h  RpcStatusInterface.h  RpcTypeDef.h
backend/cpp/ppc-framework/storage/: CacheStorage.h  FileStorage.h  RemoteStorage.h  SQLStorage.h
backend/cpp/ppc-framework/task/: TaskFrameworkInterface.h
backend/cpp/test-utils/: FakeFront.h  FakePPCMessage.h  FileTool.h  TaskMock.h
backend/cpp/tools/: build_ppc.sh  build_wedpr_cem.sh  build_wedpr_mpc.sh  install_depends.sh
backend/cpp/tools/ppc-builder/: build_ppc.py  requirements.txt
backend/cpp/tools/ppc-builder/conf/: config-example.toml  config-local.toml
backend/cpp/wedpr-computing/ppc-cem/: CMakeLists.txt
backend/cpp/wedpr-computing/ppc-cem/src/: CEMService.cpp  CEMService.h  CMakeLists.txt  Common.h  wedpr_ffi_c_equality.h
backend/cpp/wedpr-computing/ppc-cem/tests/: CMakeLists.txt  TestCEMService.cpp
backend/cpp/wedpr-computing/ppc-mpc/: CMakeLists.txt
backend/cpp/wedpr-computing/ppc-mpc/src/: CMakeLists.txt  Common.h  MPCService.cpp  MPCService.h
backend/cpp/wedpr-computing/ppc-mpc/tests/: CMakeLists.txt  TestMPCService.cpp
backend/cpp/wedpr-computing/ppc-pir/: CMakeLists.txt
backend/cpp/wedpr-computing/ppc-pir/src/: BaseOT.cpp  BaseOT.h  CMakeLists.txt  Common.h  OtPIRConfig.h  OtPIRFactory.h  OtPIRImpl.cpp  OtPIRImpl.h
backend/cpp/wedpr-computing/ppc-pir/tests/: CMakeLists.txt  FakeOtPIRFactory.h  TestBaseOT.cpp  test.json
backend/cpp/wedpr-computing/ppc-psi/: CMakeLists.txt
backend/cpp/wedpr-computing/ppc-psi/demo/: CMakeLists.txt  hash_collision_bench.cpp
backend/cpp/wedpr-computing/ppc-psi/src/: Common.h  PSIConfig.h
backend/cpp/wedpr-computing/ppc-psi/tests/: CMakeLists.txt
backend/cpp/wedpr-crypto/ppc-crypto/: CMakeLists.txt
backend/cpp/wedpr-crypto/ppc-crypto-core/: CMakeLists.txt
backend/cpp/wedpr-crypto/ppc-crypto-core/src/: CMakeLists.txt  Common.h
backend/cpp/wedpr-crypto/ppc-crypto-core/tests/: CMakeLists.txt  TestBitVector.cpp  TestHash.cpp  TestOre4Float.cpp  TestOre4Integer.cpp  TestOre4String.cpp  TestSymCrypto.cpp
backend/cpp/wedpr-crypto/ppc-crypto/demo/: CMakeLists.txt  crypto_bench.cpp
backend/cpp/wedpr-crypto/ppc-crypto/src/: CMakeLists.txt  Common.h
backend/cpp/wedpr-crypto/ppc-crypto/tests/: CMakeLists.txt  TestEccCrypto.cpp  TestOprf.cpp  TestPRNG.cpp  TestRandomot.cpp
backend/cpp/wedpr-crypto/ppc-homo/: CMakeLists.txt
backend/cpp/wedpr-crypto/ppc-homo/codec/: CMakeLists.txt  Common.h  FloatingPointCipher.h  FloatingPointCodec.cpp  FloatingPointCodec.h  SignedNumberCodec.h
backend/cpp/wedpr-crypto/ppc-homo/demo/: CMakeLists.txt  homo_perf_demo.cpp
backend/cpp/wedpr-crypto/ppc-homo/fahe/: CMakeLists.txt  Fahe.cpp  Fahe.h
backend/cpp/wedpr-crypto/ppc-homo/ihc/: CMakeLists.txt  FloatingPointIhc.cpp  FloatingPointIhc.h  IhcImpl.cpp  (+1 more)
backend/cpp/wedpr-crypto/ppc-udf/: CMakeLists.txt
backend/cpp/wedpr-crypto/sdk/: CMakeLists.txt
backend/cpp/wedpr-helper/libhelper/: CMakeLists.txt  CommandHelper.cpp  CommandHelper.h  ExitHandler.h
backend/cpp/wedpr-helper/ppc-tools/: CMakeLists.txt
backend/cpp/wedpr-helper/ppc-utilities/: Utilities.h
backend/cpp/wedpr-initializer/: CMakeLists.txt  Common.h  Initializer.cpp  Initializer.h  ProtocolInitializer.h
backend/cpp/wedpr-main/: CMakeLists.txt
backend/cpp/wedpr-main/air-node/: AirNodeInitializer.cpp  AirNodeInitializer.h  CMakeLists.txt  main.cpp
backend/cpp/wedpr-main/cem-node/: CEMInitializer.cpp  CEMInitializer.h  CMakeLists.txt  main.cpp
backend/cpp/wedpr-main/common/: NodeStarter.h
backend/cpp/wedpr-main/gateway/: CMakeLists.txt  GatewayInitializer.cpp  GatewayInitializer.h  main.cpp
backend/cpp/wedpr-main/mpc-node/: CMakeLists.txt  MPCInitializer.cpp  MPCInitializer.h  main.cpp
backend/cpp/wedpr-main/pro-node/: CMakeLists.txt  ProNodeInitializer.cpp  ProNodeInitializer.h  main.cpp
backend/cpp/wedpr-protocol/: CMakeLists.txt
backend/cpp/wedpr-protocol/grpc/: CMakeLists.txt  Common.h
backend/cpp/wedpr-protocol/protobuf/: CMakeLists.txt
backend/cpp/wedpr-protocol/tars/: CMakeLists.txt  Common.h  TarsSerialize.h  TarsServantProxyCallback.h  TarsStruct.cpp  TarsStruct.h
backend/cpp/wedpr-storage/ppc-io/: CMakeLists.txt
backend/cpp/wedpr-storage/ppc-storage/: CMakeLists.txt
backend/cpp/wedpr-transport/ppc-front/: CMakeLists.txt
backend/cpp/wedpr-transport/ppc-gateway/: CMakeLists.txt
backend/cpp/wedpr-transport/ppc-rpc/: CMakeLists.txt
backend/cpp/wedpr-transport/sdk/: CMakeLists.txt
backend/cpp/wedpr-transport/sdk-wrapper/: CMakeLists.txt
(+1001 files in other folders)
