add_subdirectory(src/psi-framework)
add_subdirectory(src/labeled-psi)
add_subdirectory(src/ra2018-psi)
add_subdirectory(src/ecdh-psi)
add_subdirectory(src/cm2020-psi)
add_subdirectory(src/ecdh-multi-psi)
#add_subdirectory(src/ecdh-conn-psi)

if(DEMO)
    add_subdirectory(demo)
endif()
add_subdirectory(src/bs-ecdh-psi)

if (TESTS)
    enable_testing()
    set(CTEST_OUTPUT_ON_FAILURE TRUE)
    add_subdirectory(tests)
endif()
